--- a/own dataset/index.html
+++ b/own dataset/index.html
@@ -17,7 +17,12 @@
       </b></p>
       
     <p id="status">Awaiting TF.js load</p>
-    <br>
+    
+    <div id="progress-container">
+      <div id="progress-bar"></div>
+  </div>
+  <p id="progress-text"></p>
+
     <video id="webcam" autoplay muted></video>
     <br>
     <button id="enableCam">Enable Webcam</button>
